--- a/vignettes/scifer_walkthrough.Rmd
+++ b/vignettes/scifer_walkthrough.Rmd
@@ -211,6 +211,21 @@ quality_report(
 )
 ```
 
+## IgBlast analysis for sequencing results
+
+The `igblast()` function will generate a data frame with the IgBlast results for each sequence. 
+
+The database argument is a path to the preferred database for species and receptor type. The database folder should contain separate `.fasta` files corresponding to the genes associated with each receptor type, e.g., `V`-, `D`-, and `J.fasta` files for BCR. The quality report creates a `sequences.fasta` file found in the `output_dir`. The path to this file should be used as the path input for the `fasta` argument in the `igblast()` function.
+
+```{r eval=FALSE}
+igblast(
+    database = "~/full/path/to/the/database/location/",
+    fasta = "~/full/path/to/your/output_dir/sequences.fasta",
+    threads = 1 #For parallel processing. Default = 1
+)
+
+```
+
 
 ```{r session_info}
 sessionInfo()
