add new env for linux arch64
even though the env is not working since igblast is not present for arm64 architectures yet, I will leave as a separate as a good practice for when it is included
additionally, removed from the vignette the run for of igblast for aarch64

--- a/vignettes/scifer_walkthrough.Rmd
+++ b/vignettes/scifer_walkthrough.Rmd
@@ -211,11 +211,17 @@ quality_report(
 )
 ```
 
-## Checking for windows & osx-arm64 operating systems
 ```{r os_condition, warning=FALSE, include=FALSE}
 
-ifelse(basilisk.utils::isWindows() == TRUE | basilisk.utils::isMacOSXArm() == TRUE, 
- os_chunk <- FALSE, os_chunk <- TRUE)
+if(basilisk.utils::isWindows() == TRUE){
+  os_chunk <- FALSE
+} else if(basilisk.utils::isMacOSXArm() == TRUE){
+  os_chunk <- FALSE
+} else if(Sys.info()[["sysname"]] == "Linux" && Sys.info()[["machine"]] == "aarch64"){
+  os_chunk <- FALSE
+} else {
+  os_chunk <- TRUE
+}
 
 
 ```
