Refactors basilisk import calls
Updates import calls for basilisk functions to import directly from the 'basilisk' package instead of 'basilisk.utils'.
This change simplifies the code and aligns with the intended usage of the new basilisk package in 3.21.

--- a/vignettes/scifer_walkthrough.Rmd
+++ b/vignettes/scifer_walkthrough.Rmd
@@ -213,9 +213,9 @@ quality_report(
 
 ```{r os_condition, warning=FALSE, include=FALSE}
 
-if(basilisk.utils::isWindows() == TRUE){
+if(basilisk::isWindows() == TRUE){
   os_chunk <- FALSE
-} else if(basilisk.utils::isMacOSXArm() == TRUE){
+} else if(basilisk::isMacOSXArm() == TRUE){
   os_chunk <- FALSE
 } else if(Sys.info()[["sysname"]] == "Linux" && Sys.info()[["machine"]] == "aarch64"){
   os_chunk <- FALSE
